# asm17-agentic-dev-practice

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  Dockerfile.api  README.md  docker-compose.yml  package.json  pyproject.toml  railway.toml
.agents/skills/grill-with-docs/: SKILL.md  (+1 more)
app/: api.py  main.py
app/core/: config.py
app/schedule_agent/: ADR.md  CONTEXT.md  graph.py  prompts.py  schemas.py
apps/api/: package.json
apps/web/: package.json
apps/worker-agent/: package.json
apps/worker-calendar/: package.json
apps/worker-notification/: package.json
backend/: ADR.md  CONTEXT.md  main.py
backend/api/: schedules.py
backend/core/: auth.py  config.py
docs/: AGENT_SPEC.md  API_CONTRACTS.md  DATA_MODEL.md  GOOGLE_CALENDAR_SYNC.md  NOTIFICATION_ARCHITECTURE.md  PRODUCT_SPEC.md  RUNBOOK.md  SECURITY.md  SLACK_INTEGRATION.md  TESTING.md
evals/ask_context/: ADR.md  CONTEXT.md  cases.jsonl
evals/classification/: ADR.md  CONTEXT.md  cases.jsonl  evaluate.py
evals/plan/: ADR.md  CONTEXT.md  dataset.jsonl  run_eval.py
evals/pre_validate/: ADR.md  CONTEXT.md  cases.jsonl  evaluate.py
frontend/: ADR.md  CONTEXT.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  vite-env.d.ts
tests/: test_schedule_agent.py
tests/ask_context/: test_ask_context.py
tests/backend/: conftest.py  factories.py  test_auth.py  test_schedules.py
tests/plan/: test_plan.py
tests/post_validate/: test_post_validate.py
tests/pre_validate/: test_evaluate.py  test_pre_validate.py
(+26 files in other folders)
